feat(graalvm): eliminate module symbols
chore: drop all symbols for js modules
chore: implement build-time intrinsics gathering
chore: impelment build-time polyfills parsing
chore: ffm config
chore: general cleanups

Signed-off-by: Sam Gammon <sam@elide.dev>